--- a/SmartOrder/SmartOrder/Base.lproj/Main.storyboard
+++ b/SmartOrder/SmartOrder/Base.lproj/Main.storyboard
@@ -242,20 +242,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Bb-Zp-TLs">
+                                <rect key="frame" x="19.5" y="104" width="375" height="20.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="375" id="QFX-go-xNf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ifL-6V-czq">
+                                <rect key="frame" x="20" y="132" width="374" height="269"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="269" id="XOE-Uo-0Pm"/>
+                                    <constraint firstAttribute="width" constant="374" id="Z8a-01-00g"/>
+                                </constraints>
+                            </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="ZGu-P5-Cso">
-                                <rect key="frame" x="19.5" y="122" width="375" height="384.5"/>
+                                <rect key="frame" x="19.5" y="409" width="375" height="384.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Bb-Zp-TLs">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="20.5"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="375" id="QFX-go-xNf"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vs3-tu-l8c">
-                                        <rect key="frame" x="0.0" y="36.5" width="375" height="236"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="272.5"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="236" id="7q9-gs-I8d"/>
                                             <constraint firstAttribute="width" constant="375" id="u5h-tY-Oh2"/>
@@ -307,31 +314,27 @@
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="vs3-tu-l8c" firstAttribute="leading" secondItem="3Bb-Zp-TLs" secondAttribute="leading" id="1cE-Ui-RHC"/>
-                                    <constraint firstItem="vs3-tu-l8c" firstAttribute="trailing" secondItem="3Bb-Zp-TLs" secondAttribute="trailing" id="6Jm-wO-603"/>
                                     <constraint firstItem="Kl7-Yg-9fx" firstAttribute="trailing" secondItem="vs3-tu-l8c" secondAttribute="trailing" id="EUW-Xg-wma"/>
                                     <constraint firstItem="Kl7-Yg-9fx" firstAttribute="leading" secondItem="vs3-tu-l8c" secondAttribute="leading" id="EpW-l6-T6J"/>
-                                    <constraint firstItem="Kl7-Yg-9fx" firstAttribute="leading" secondItem="3Bb-Zp-TLs" secondAttribute="leading" id="Yhk-qu-aCQ"/>
-                                    <constraint firstItem="Kl7-Yg-9fx" firstAttribute="trailing" secondItem="3Bb-Zp-TLs" secondAttribute="trailing" id="by1-Eu-bNR"/>
                                     <constraint firstAttribute="height" constant="384.5" id="m1L-NL-0Qb"/>
                                     <constraint firstItem="Kl7-Yg-9fx" firstAttribute="top" secondItem="vs3-tu-l8c" secondAttribute="bottom" id="wmU-rQ-Z1q"/>
                                 </constraints>
-                                <variation key="heightClass=regular-widthClass=regular">
-                                    <mask key="subviews">
-                                        <include reference="3Bb-Zp-TLs"/>
-                                    </mask>
-                                </variation>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.8980452418" green="0.89802831409999995" blue="0.89803987740000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="ZGu-P5-Cso" firstAttribute="top" secondItem="UwH-Ll-Qgl" secondAttribute="top" constant="34" id="14K-94-YfH"/>
+                            <constraint firstItem="ifL-6V-czq" firstAttribute="top" secondItem="hg0-bt-Gcs" secondAttribute="top" constant="132" id="KVX-9Y-9nq"/>
+                            <constraint firstItem="3Bb-Zp-TLs" firstAttribute="top" secondItem="hg0-bt-Gcs" secondAttribute="top" constant="104" id="KzK-OH-oNJ"/>
+                            <constraint firstItem="ifL-6V-czq" firstAttribute="centerX" secondItem="hg0-bt-Gcs" secondAttribute="centerX" id="XNN-jH-g8X"/>
+                            <constraint firstItem="ZGu-P5-Cso" firstAttribute="top" secondItem="hg0-bt-Gcs" secondAttribute="top" constant="409" id="ZNH-3G-MF1"/>
+                            <constraint firstItem="3Bb-Zp-TLs" firstAttribute="centerX" secondItem="hg0-bt-Gcs" secondAttribute="centerX" id="aMK-yv-7Vv"/>
                             <constraint firstItem="ZGu-P5-Cso" firstAttribute="centerX" secondItem="hg0-bt-Gcs" secondAttribute="centerX" id="kP1-9f-w7R"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="UwH-Ll-Qgl"/>
                     </view>
                     <connections>
                         <outlet property="detailed" destination="3Bb-Zp-TLs" id="kfR-tb-wSu"/>
+                        <outlet property="mapTest" destination="ifL-6V-czq" id="4H4-2i-UqV"/>
                         <outlet property="noBtn" destination="aJz-YQ-kTZ" id="baH-z0-3ip"/>
                         <outlet property="storeLocation" destination="Kl7-Yg-9fx" id="hwb-Y6-sDM"/>
                         <outlet property="storePhoto" destination="vs3-tu-l8c" id="1sc-PE-wyL"/>
